Add delete and update function!

--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -1,16 +1,24 @@
 <%- include("partials/header.ejs") %>
+
 <div class="create-text">Edit your blog!</div>
 <div class="form">
     <form action="/blog/<%= index %>/editor" method="POST">
         <div class="form-row">
-          <input name="title" type="text" class="title-input" value="<%= post.title %>" placeholder="Title..." />
+            <input name="title" type="text" class="title-input" value="<%= post.title %>" placeholder="Title..." />
         </div>
         <div class="form-row">
-          <textarea class="content-input" name="content" rows="4" placeholder="Content..."><%= post.content %></textarea>
+            <textarea name="content" class="content-input" rows="4" placeholder="Content..."><%= post.content %></textarea>
         </div>
         <div class="form-row">
-          <input type="submit" class="save" value="Save Changes" />
+            <input type="submit" class="submit" value="Update" />
         </div>
-      </form>
+    </form>
+    <form action="/blog/<%= index %>/delete" method="POST">
+        <div class="form-row">
+            <input type="submit" class="submit" value="Delete" />
+        </div>
+    </form>
 </div>
+
 <%- include("partials/footer.ejs") %>
+
