Title correction adding 's'!

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
     <header>
       <nav id="navbar-container">
         <div id="navbar">
-          <div class="redirect">The Best Blog</div>
+          <div class="redirect">The Best Blogs</div>
           <div class="options">
             <ul class="items">
               <a href="/"><li class="nav-list">Blogs</li></a>
